# PM_center

./: .gitignore  README.md  index.html  logo.psd  package-lock.json  package.json  tailwind.config.js
Art/: dialog_luckystar.psd
examples/plugins/: README.md  image-flip-brighten.rar
examples/plugins/blender-backup-cleaner/: main.py  plugin.json
examples/plugins/demo_plugin/: main.py  plugin.json  (+1 more)
scripts/: app-version.mjs  export-wix-dialog.py  plugin-tool.mjs  prepare-plugin-python.mjs  sync-version.mjs  tauri-command.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/blendio/: Cargo.toml  README.md
src-tauri/crates/blendio/docs/: index.html
src-tauri/crates/blendio/src/: animation.rs  array_view.rs  bhead.rs  cli.rs  error.rs  gltf_export.rs  header.rs  input.rs  lib.rs  material.rs  mesh.rs  modifier.rs  report.rs  sdna.rs  summary.rs  view.rs
src-tauri/crates/blendio/tests/: blend2glb_integration.rs  blendio_integration.rs
src-tauri/icons/: icon.icns
src-tauri/resources/plugin-python/: README.md
src-tauri/resources/plugin-sdk/pmc_plugin/: __init__.py
src-tauri/src/: icon_extractor.rs  lib.rs  main.rs  process_utils.rs  thumbnail_cache.rs  tools.rs
src-tauri/src/db/: mod.rs
src-tauri/src/file_details/: mod.rs
src-tauri/src/fs/: external_drag.rs  mod.rs  shell_context_menu.rs
src-tauri/src/p2p/: mod.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/python/: blender.rs  mod.rs
src-tauri/src/python_env/: mod.rs
src-tauri/src/task/: mod.rs
src-tauri/src/tree_cache/: mod.rs
src-tauri/src/watcher/: mod.rs
src/api/: externalDrag.ts  plugins.ts  projects.ts  scripts.ts
src/components/: ChangeLog.tsx  Dialog.tsx  Launcher.tsx  P2PChat.tsx  PythonEnvManager.tsx  ScriptRunner.tsx  SettingsPanel.tsx  TaskButton.tsx  WelcomeScreen.tsx
src/config/: appMeta.ts
src/stores/: clipboardStore.ts  fileDragStore.ts  launcherStore.ts  p2pStore.ts  pluginStore.ts  projectStore.ts  pythonEnvStore.ts  scriptStore.ts  settingsStore.ts  shellTabStore.ts  taskStore.ts  uiStore.ts  windowStore.ts  workspaceTabStore.ts
src/templates/: index.ts
src/types/: externalDrag.ts  index.ts  plugin.ts  task.ts
src/utils/: appSession.ts  excludePatterns.ts  mdt.ts  pluginActions.ts
(+54 files in other folders)
