[package]
name = "pm_center"
version = "2.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pm_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
notify = "5"
walkdir = "2"
mime_guess = "2"
anyhow = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1"
base64 = "0.22"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
infer = "0.19"
kamadak-exif = "0.6"
lofty = "0.22"
blendio = { path = "crates/blendio" }

# Lock time crate to compatible version (>=0.3.35 for Rust 1.80+)
time = "=0.3.36"
tauri-plugin-single-instance = "2.4.0"
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Ole", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging"] }
encoding_rs = "0.8"
tauri-plugin-autostart = "2"
