[package]
name = "blendio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
flate2 = "1.1.1"
memmap2 = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
zstd = "0.13.3"

[dev-dependencies]
gltf = "1.4.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }
